k8s/k8s-resource-files/nginx-proxy-manager/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy-manager-service
  namespace: nginx-proxy-manager
spec:
  selector:
    app: nginx-proxy-manager
  ports:
    - port: 80
      name: http-port
    - port: 81
      name: admin-port
